# Amply

./: .dockerignore  Dockerfile  README.md  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: deploy.yml
apps/backend/: package.json
apps/backend/ev_charging/: .gitignore  Anchor.toml  package-lock.json  package.json
apps/backend/ev_charging/programs/ev_charging/: Cargo.toml
apps/backend/ev_charging/programs/ev_charging/src/: lib.rs  register_charger.rs
apps/backend/ev_charging/tests/: ev_charging.ts
apps/backend/src/: index.ts
apps/backend/src/routes/: user.ts
apps/web/: env.example  middleware.ts  next.config.js  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/(authPages)/: layout.tsx
apps/web/app/aipricing/: page.tsx
apps/web/app/context/: MapContext.tsx  StoreProvider.tsx
apps/web/components/: ChargeButton.tsx  dashboard-header.tsx  feature-card.tsx  featurecard.tsx  hero-section.tsx  hero.tsx  map-component.tsx  map.tsx  mode-toggle.tsx  modetoggle.tsx  navbar.tsx  select-charger.tsx  station-card.tsx  stationcard.tsx  theme-provider.tsx  voice-command-dialog.tsx  voicecommand.tsx
apps/web/context/: LoadingContext.tsx  MapContext.tsx
apps/web/hooks/: useLoading.ts  usebalance.ts  usemap.ts
apps/web/idl/: ev_charging.json
apps/web/store/: charger.ts  chargerSlice.ts  hooks.ts
apps/web/types/: index.d.ts  nomanatom.d.ts
apps/web/utils/: TokenBal.tsx  tokenbalance.ts  utils.ts
(+43 files in other folders)
